--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/viewMi"
         android:icon="@drawable/ic_action_name"
-        android:title="Adicionar Contato"
+        android:title="@string/adicionar_contato"
         app:showAsAction="ifRoom"/>
 </menu>
